Add video and images with styles

--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <link rel="stylesheet" href="resources/css/style.css">
 
+  resources/
+      css/
+          style.css
+      images/
+          landscape.jpg
+          cellphone-icon.png
+      videos/
+          stock-video.mp4
+ 
